--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     margin: 0 32px;
 }
+
+.bounty{
+    border: 1px solid #333;
+    padding: 10px;
+    margin: 5px;
+}
